--- a/redeyes.html
+++ b/redeyes.html
@@ -3,16 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>襍､縺?楜</title>
+    <meta name="contained" content="noindex">
     <style>
         body {
             background-color: black;
             color: #00FF00;
             font-family: monospace;
             overflow: hidden;
-        }
-        .red-mode {
-            color: #FF0000;
-            border-color: #FF0000;
         }
         .glitch {
             color: #FF0000;
@@ -24,16 +21,43 @@
             50% { text-shadow: -2px -2px red, 2px 2px blue; }
             100% { text-shadow: 1px 1px red, -1px -1px blue; }
         }
+        #messageBox {
+            padding: 20px;
+            border: 1px solid #00FF00;
+            margin: 20px;
+            max-width: 80%;
+        }
+        button {
+            background-color: #00FF00;
+            color: black;
+            border: none;
+            padding: 10px 20px;
+            cursor: pointer;
+            font-family: monospace;
+            z-index: 10;
+            position: relative;
+        }
+        button:hover {
+            background-color: #008000;
+        }
+        .no-glitch {
+            z-index: 10;
+            position: relative;
+        }
+        .red-mode {
+            color: #FF0000;
+            border-color: #FF0000;
+        }
     </style>
 </head>
 <body>
     <div id="div1">
         <div id="messageBox">
-            <strong>新しいメッセージが（１）通あります！</strong><br>
-            <button type="button" onclick="go()">確認する</button>
+            <strong class="no-glitch">新しいメッセージが（１）通あります！</strong><br>
+            <button type="button" class="no-glitch" onclick="go()">確認する</button>
             <div id="innerdiv" style="display:none;">
                 ================================================================================================<br>
-                2025年2月30日 23:10:51　　　　　　　　　　　　　　　　　　　　　  作成　外峯 零<br>
+                2025年2月30日 23:10:51 作成 外峯 零<br>
                 ================================================================================================<br>
                 荒ら屋暮らしの頃は覚えてるだけ無駄らしい？<br>
                 それってさ、ちょっと酷い話だと思わないこと？<br>
@@ -43,18 +67,19 @@
                 だって此処は、存在しなくなったモノが集まる街だから。<br>
                 市街というか、死骸ね。<br>
                 無駄だなんて思いたくないわ。<br>
-                <br>
             </div>
         </div>
     </div>
 
     <script type="text/javascript">
-        var time = 1000;
-        var ICU = ["み","て","る","よ"];
+        var time = 12000;
+        var ICU = ["赤い","め","視","てる"];
         var counter = 0;
-        var maxCounter = 50; // 最大実行回数
-        var interval;
+        var flag = 0;
         var content1 = document.getElementById("innerdiv").innerHTML;
+        var redPhase = false;
+        var redPhaseStart = 22000;
+        var finalMessageDelay = 45000;
 
         document.getElementById("innerdiv").style.display = "none";
 
@@ -62,44 +87,38 @@
             return Math.floor(Math.random() * n);
         }
 
-        function Change() {
+        function Change(str) {
             try {
-                var content = content1.split("");
+                var content = str.split("");
                 var cache = Random(content.length);
-
-                for (var i = 0; i < ICU.length && cache + i < content.length; i++) {
+                for (var i = 0; i < ICU.length; i++) {
                     content[cache + i] = ICU[i];
                 }
-
                 document.getElementById("innerdiv").innerHTML = content.join("");
 
-                counter++;
-                if (counter >= maxCounter) {
-                    throw new Error("Max count reached");
+                if (!redPhase && counter * time >= redPhaseStart) {
+                    document.body.classList.add("red-mode");
+                    redPhase = true;
                 }
 
-                // 時間を短くしすぎない
-                time = Math.max(time - 100, 50);
-
+                counter++;
             } catch (err) {
-                clearInterval(interval);
-                ShowFinalMessage();
+                EndMessage();
             }
         }
 
         function go() {
             document.getElementById("innerdiv").style.display = "block";
-            interval = setInterval(Change, time);
-            setTimeout(() => {
-                document.body.classList.add("red-mode");
-            }, 10000); // 10秒後に赤色に変化
+            setInterval(function () {
+                Change(content1);
+            }, 100);
         }
 
-        function ShowFinalMessage() {
-            document.getElementById("innerdiv").innerHTML = '<div class="glitch">あかい眼が視ている</div>';
-            setTimeout(() => {
-                document.getElementById("innerdiv").innerHTML = '<div class="glitch">よっぽど憶えられたいらしい、随分と変わったお方だこと。<br>良いでしょう、おぼえておくね。</div>';
-            }, 2000); // 2秒後に次のメッセージを表示
+        function EndMessage() {
+            document.getElementById("innerdiv").innerHTML = "<div class='glitch'>あかい眼が視ている</div>";
+            setTimeout(function () {
+                document.getElementById("innerdiv").innerHTML = "<div class='glitch'>よっぽど憶えられたいらしい、随分と変わったお方だこと。<br>良いでしょう、おぼえておくね。</div>";
+            }, 5000);
         }
     </script>
 </body>
