--- a/redeyes.html
+++ b/redeyes.html
@@ -72,14 +72,88 @@
         </div>
     </div>
 
- <script type="text/javascript">
-    var time = 10000;
+
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <title>襍､縺?楜</title>
+    <meta name="contained" content="noindex">
+    <style>
+        body {
+            background-color: black;
+            color: #00FF00;
+            font-family: monospace;
+            overflow: hidden;
+        }
+        .glitch {
+            color: #FF0000;
+            animation: glitch 1s infinite alternate;
+            white-space: pre-wrap;
+        }
+        @keyframes glitch {
+            0% { text-shadow: 2px 2px red, -2px -2px blue; }
+            50% { text-shadow: -2px -2px red, 2px 2px blue; }
+            100% { text-shadow: 1px 1px red, -1px -1px blue; }
+        }
+        #messageBox {
+            padding: 20px;
+            border: 1px solid #00FF00;
+            margin: 20px;
+            max-width: 80%;
+        }
+        button {
+            background-color: #00FF00;
+            color: black;
+            border: none;
+            padding: 10px 20px;
+            cursor: pointer;
+            font-family: monospace;
+            z-index: 10;
+            position: relative;
+        }
+        button:hover {
+            background-color: #008000;
+        }
+        .no-glitch {
+            z-index: 10;
+            position: relative;
+        }
+        .red-mode {
+            color: #FF0000;
+            border-color: #FF0000;
+        }
+    </style>
+</head>
+<body>
+    <div id="div1">
+        <div id="messageBox">
+            <strong class="no-glitch">新しいメッセージが（１）通あります！</strong><br>
+            <button type="button" class="no-glitch" onclick="go()">確認する</button>
+            <div id="innerdiv" style="display:none;">
+                ================================================================================================<br>
+                2025年2月30日 23:10:51 作成 外峯 零<br>
+                ================================================================================================<br>
+                荒ら屋暮らしの頃は覚えてるだけ無駄らしい？<br>
+                それってさ、ちょっと酷い話だと思わないこと？<br>
+                ずっとお世話になった荒ら屋も可哀想だし。<br>
+                私に『廃墟の歌姫』という渾名が付いたのも此処のお陰だし。<br>
+                この街に来てから偶に訪ねたりするの。<br>
+                だって此処は、存在しなくなったモノが集まる街だから。<br>
+                市街というか、死骸ね。<br>
+                無駄だなんて思いたくないわ。<br>
+            </div>
+        </div>
+    </div>
+
+<script type="text/javascript">
+    var time = 1000; // メッセージが変わる間隔 (短縮化)
     var ICU = ["赤", "め", "視", "てる"]; // 変化する文字
     var counter = 0;
-    var flag = 0;
-    var content1 = document.getElementById("innerdiv").innerHTML; // 初期内容
+    var maxChanges = 20; // 最大変更回数（調整可能）
     var redPhase = false;
-    var redPhaseStart = 12000; // 赤くなるタイミング
+    var redPhaseStart = 10; // 赤くなるタイミング（回数）
+    var intervalID = null;
 
     // メッセージのランダム変更
     function Random(n) {
@@ -87,29 +161,33 @@
     }
 
     // 文字の変更
-    function Change(str) {
-      try {
-        var content = str.split("");
-        var cache = Random(content.length);
+    function Change() {
+      var element = document.getElementById("innerdiv");
+      var content = element.innerHTML.split("");
+      var cache = Random(content.length);
 
-        // ICUの文字をランダムな位置に埋め込む
-        for (var i = 0; i < ICU.length; i++) {
+      // ICUの文字をランダムな位置に埋め込む
+      for (var i = 0; i < ICU.length; i++) {
+        if (cache + i < content.length) {
           content[cache + i] = ICU[i];
         }
+      }
 
-        // メッセージ更新
-        document.getElementById("innerdiv").innerHTML = content.join("");  
+      // メッセージ更新
+      element.innerHTML = content.join("");  
 
-        // 赤色変化
-        if (!redPhase && counter * time >= redPhaseStart) {
-          document.body.classList.add("red-mode");
-          document.querySelector("button").classList.add("red-mode");
-          redPhase = true;
-        }
+      // 赤色変化 (指定カウントに到達時)
+      if (!redPhase && counter >= redPhaseStart) {
+        document.body.classList.add("red-mode");
+        document.querySelector("button").classList.add("red-mode");
+        redPhase = true;
+      }
 
-        counter++;
-      } catch (err) {
-        // エラー時に最終メッセージ
+      counter++;
+
+      // 最大変更回数に達したら最終メッセージへ
+      if (counter >= maxChanges) {
+        clearInterval(intervalID); // タイマー停止
         EndMessage();
       }
     }
@@ -117,9 +195,7 @@
     // 「確認する」ボタンが押されたとき
     function go() {
       document.getElementById("innerdiv").style.display = "block"; 
-      var s = setInterval(function () {
-        Change(content1);
-      }, time);  // メッセージが時間ごとに変わる
+      intervalID = setInterval(Change, time); // 一定時間ごとにメッセージを変更
     }
 
     // メッセージが終了した後の処理
@@ -127,10 +203,6 @@
       document.getElementById("innerdiv").innerHTML = "<div class='glitch'>あかい眼が視ている</div>";
       setTimeout(function () {
         document.getElementById("innerdiv").innerHTML = "<div class='glitch'>よっぽど憶えられたいらしい、随分と変わったお方だこと。<br>良いでしょう、おぼえておくね。</div>";
-        flag = flag + 1;
-        setTimeout(function() {
-          // さらに処理を進める
-        }, 5000);
       }, 4000);  // 4秒後に次のメッセージ
     }
   </script>
