--- a/redeyes.html
+++ b/redeyes.html
@@ -5,125 +5,45 @@
     <meta charset="UTF-8">
     <title>襍､縺?楜</title>
     <meta name="contained" content="noindex">
-    <style>
+ <style type="text/css">
         body {
             background-color: black;
             color: #00FF00;
             font-family: monospace;
             overflow: hidden;
         }
-        .glitch {
-            color: #FF0000;
-            animation: glitch 1s infinite alternate;
-            white-space: pre-wrap;
-        }
-        @keyframes glitch {
-            0% { text-shadow: 2px 2px red, -2px -2px blue; }
-            50% { text-shadow: -2px -2px red, 2px 2px blue; }
-            100% { text-shadow: 1px 1px red, -1px -1px blue; }
-        }
-        #messageBox {
-            padding: 20px;
-            border: 1px solid #00FF00;
-            margin: 20px;
-            max-width: 80%;
-        }
-        button {
-            background-color: #00FF00;
-            color: black;
-            border: none;
-            padding: 10px 20px;
-            cursor: pointer;
-            font-family: monospace;
-            z-index: 10;
-            position: relative;
-        }
-        button:hover {
-            background-color: #008000;
-        }
-        .no-glitch {
-            z-index: 10;
-            position: relative;
-        }
-        .red-mode {
-            color: #FF0000;
-            border-color: #FF0000;
-        }
-    </style>
-</head>
-<body>
-    <div id="div1">
-        <div id="messageBox">
-            <strong class="no-glitch">新しいメッセージが（１）通あります！</strong><br>
-            <button type="button" class="no-glitch" onclick="go()">確認する</button>
-            <div id="innerdiv" style="display:none;">
-                ================================================================================================<br>
-                2025年2月30日 23:10:51 作成 外峯 零<br>
-                ================================================================================================<br>
-                荒ら屋暮らしの頃は覚えてるだけ無駄らしい？<br>
-                それってさ、ちょっと酷い話だと思わないこと？<br>
-                ずっとお世話になった荒ら屋も可哀想だし。<br>
-                私に『廃墟の歌姫』という渾名が付いたのも此処のお陰だし。<br>
-                この街に来てから偶に訪ねたりするの。<br>
-                だって此処は、存在しなくなったモノが集まる街だから。<br>
-                市街というか、死骸ね。<br>
-                無駄だなんて思いたくないわ。<br>
-            </div>
-        </div>
-    </div>
 
+    .red-mode {
+      background-color: red;
+      color: white;
+    }
 
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="UTF-8">
-    <title>襍､縺?楜</title>
-    <meta name="contained" content="noindex">
-    <style>
-        body {
-            background-color: black;
-            color: #00FF00;
-            font-family: monospace;
-            overflow: hidden;
-        }
-        .glitch {
-            color: #FF0000;
-            animation: glitch 1s infinite alternate;
-            white-space: pre-wrap;
-        }
-        @keyframes glitch {
-            0% { text-shadow: 2px 2px red, -2px -2px blue; }
-            50% { text-shadow: -2px -2px red, 2px 2px blue; }
-            100% { text-shadow: 1px 1px red, -1px -1px blue; }
-        }
-        #messageBox {
-            padding: 20px;
-            border: 1px solid #00FF00;
-            margin: 20px;
-            max-width: 80%;
-        }
-        button {
-            background-color: #00FF00;
-            color: black;
-            border: none;
-            padding: 10px 20px;
-            cursor: pointer;
-            font-family: monospace;
-            z-index: 10;
-            position: relative;
-        }
-        button:hover {
-            background-color: #008000;
-        }
-        .no-glitch {
-            z-index: 10;
-            position: relative;
-        }
-        .red-mode {
-            color: #FF0000;
-            border-color: #FF0000;
-        }
-    </style>
+    .glitch {
+      font-size: 18px;
+      color: red;
+      text-decoration: underline;
+    }
+
+    #innerdiv {
+      display: none;
+    }
+
+    button {
+      padding: 10px 20px;
+      background-color: #00FF00;
+      color: white;
+      border: none;
+      cursor: pointer;
+    }
+
+    button.red-mode {
+      background-color: red;
+    }
+
+    button:hover {
+      background-color: #00FF00;
+    }
+  </style>
 </head>
 <body>
     <div id="div1">
