--- a/redeyes.html
+++ b/redeyes.html
@@ -14,8 +14,8 @@
         }
 
     .red-mode {
-      background-color: red;
-      color: white;
+      background-color: black;
+      color: red;
     }
 
     .glitch {
