--- a/redeyes.html
+++ b/redeyes.html
@@ -5,11 +5,12 @@
     <meta charset="UTF-8">
     <title>襍､縺?楜</title>
     <meta name="contained" content="noindex">
- <style type="text/css">
+    <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
+    <style type="text/css">
         body {
             background-color: black;
             color: #00FF00;
-            font-family: monospace;
+            font-family: 'VT323', monospace;
             overflow: hidden;
         }
 
