--- a/redeyes.html
+++ b/redeyes.html
@@ -5,12 +5,13 @@
     <meta charset="UTF-8">
     <title>襍､縺?楜</title>
     <meta name="contained" content="noindex">
-    <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
-    <style type="text/css">
+<style type="text/css">
+    @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+         
         body {
             background-color: black;
             color: #00FF00;
-            font-family: 'VT323', monospace;
+        font-family: 'Press Start 2P', monospace;
             overflow: hidden;
         }
 
