--- a/redeyes.html
+++ b/redeyes.html
@@ -150,9 +150,9 @@
 
     // メッセージが終了した後の処理
 function EndMessage() {
-    document.getElementById("innerdiv").innerHTML = ""<div class='glitch' style='font-weight: bold;'>あかい眼が視ている</div>";
+    document.getElementById("innerdiv").innerHTML = "<div class='glitch' style='font-weight: bold;'>あかい眼が視ている</div>";
     setTimeout(function () {
-        document.getElementById("innerdiv").innerHTML = ""<div class='glitch' style='font-weight: bold;'>よっぽど憶えられたいらしい、随分と変わったお方だこと。<br>良いでしょう、おぼえておくね。</div>";
+        document.getElementById("innerdiv").innerHTML = "<div class='glitch' style='font-weight: bold;'>よっぽど憶えられたいらしい、随分と変わったお方だこと。<br>良いでしょう、おぼえておくね。</div>";
     }, 4000);  // 4秒後に次のメッセージ
 }
   </script>
