--- a/redeyes.html
+++ b/redeyes.html
@@ -97,63 +97,59 @@
     </div>
 
 <script type="text/javascript">
-    var time = 1000; // メッセージが変わる間隔 (短縮化)
-    var ICU = ["赤", "め", "視", "てる"]; // 変化する文字
-    var counter = 0;
-    var maxChanges = 20; // 最大変更回数（調整可能）
-    var redPhase = false;
-    var redPhaseStart = 10; // 赤くなるタイミング（回数）
-    var intervalID = null;
+var time = 1000; // メッセージが変わる間隔
+var ICU = ["赤", "め", "視", "てる"]; // 変化する文字
+var counter = 0;
+var maxChanges = 20; // 最大変更回数
+var redPhase = false;
+var redPhaseStart = 10; // 赤くなるタイミング
+var intervalID = null;
+var currentText = ""; // 現在の文字列
 
-    // メッセージのランダム変更
-    function Random(n) {
-      return Math.floor(Math.random() * n);
-    }
+// メッセージのランダム変更
+function Random(n) {
+  return Math.floor(Math.random() * n);
+}
 
-    // 文字の変更
- function Change() {
-    var element = document.getElementById("innerdiv");
-    var content = element.innerHTML.split("");
-    var cache = Random(content.length);
+// 文字の変更
+function Change() {
+  var element = document.getElementById("innerdiv");
 
-    // ICUの文字をランダムな位置に埋め込む
-    for (var i = 0; i < ICU.length; i++) {
-        if (cache + i < content.length) {
-            content[cache + i] = ICU[i];
-        }
-    }
+  // 文字を増やしていく
+  if (counter < ICU.length) {
+    currentText += ICU[counter];
+  }
 
-    // メッセージ更新
-    element.innerHTML = content.join("");
+  element.innerHTML = currentText;
 
-    // 赤色変化 (指定カウントに到達時)
-    if (!redPhase && counter >= redPhaseStart) {
-        document.body.classList.add("red-mode");
-        document.querySelector("button").classList.add("red-mode");
-        redPhase = true;
-    }
+  // 赤色変化
+  if (!redPhase && counter >= redPhaseStart) {
+    document.body.classList.add("red-mode");
+    document.querySelector("button").classList.add("red-mode");
+    redPhase = true;
+  }
 
-    counter++;
+  counter++;
 
-    // 最大変更回数に達したら最終メッセージへ
-    if (counter >= maxChanges) {
-        clearInterval(intervalID); // タイマー停止
-        EndMessage();
-      }
-    }
+  // 最大変更回数に達したら最終メッセージへ
+  if (counter >= maxChanges) {
+    clearInterval(intervalID);
+    EndMessage();
+  }
+}
 
-    // 「確認する」ボタンが押されたとき
-    function go() {
-      document.getElementById("innerdiv").style.display = "block"; 
-      intervalID = setInterval(Change, time); // 一定時間ごとにメッセージを変更
-    }
+// 「確認する」ボタンが押されたとき
+function go() {
+  document.getElementById("innerdiv").style.display = "block";
+  intervalID = setInterval(Change, time); // 一定時間ごとにメッセージを変更
+}
 
-    // メッセージが終了した後の処理
+// メッセージが終了した後の処理
 function EndMessage() {
-    document.getElementById("innerdiv").innerHTML = "<div class='glitch' style='font-weight: bold;'>あかい眼が視ている</div>";
-    setTimeout(function () {
-        document.getElementById("innerdiv").innerHTML = "<div class='glitch' style='font-weight: bold;'>よっぽど憶えられたいらしい、随分と変わったお方だこと。<br>良いでしょう、おぼえておくね。</div>";
-    }, 4000);  // 4秒後に次のメッセージ
+  document.getElementById("innerdiv").innerHTML = "<div class='glitch' style='font-weight: bold;'>あかい眼が視ている</div>";
+  setTimeout(function () {
+    document.getElementById("innerdiv").innerHTML = "<div class='glitch' style='font-weight: bold;'>よっぽど憶えられたいらしい、随分と変わったお方だこと。<br>良いでしょう、おぼえておくね。</div>";
+  }, 4000); // 4秒後に次のメッセージ
 }
   </script>
 </body>
