--- a/main.html
+++ b/main.html
@@ -13,13 +13,18 @@
     <header>
       <div class="header-top">
         <div class="logo">
+          <!-- 로고 이미지 삽입 -->
+          <img src="image/logo.png" alt="병원 로고">
         </div>
         <div class="search">
-          <input class="search-text" type="text" id="searchInput" placeholder="検索語を入力します" onkeyup="enterkeySearch()"/>
-          <button class="search-btn" type="submit" onclick="searchPage()"></button>
+          <input class="search-text" type="text" id="searchInput" placeholder="検索語を入力します" onkeyup="enterkeySearch(event)">
+          <button class="search-btn" type="submit" onclick="searchPage()">
+            <!-- 검색 버튼 아이콘 -->
+            <img src="image/search_Icon.png" alt="검색">
+          </button>
         </div>
       </div>
-      <div class="nav">
+      <nav class="nav">
         <ul>
           <li><a href="#">紹介</a></li>
           <li><a href="https://hospinfo-enuei-city.org/guideline">利用規約</a></li>
@@ -28,7 +33,7 @@
           <li><a href="#">連絡所</a></li>
           <li><a href="#">お問い合わせ</a></li>
         </ul>
-      </div>
+      </nav>
     </header>
     <main>
       <div class="info">
@@ -45,7 +50,7 @@
       </div>
     </footer>
 
-    <!-- 🔹 JavaScript (検索機能) -->
+    <!-- JavaScript (検索機能) -->
     <script>
       function searchPage() {
         const pages = {
