--- a/main.html
+++ b/main.html
@@ -8,15 +8,17 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@200..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&family=Noto+Serif+JP:wght@200..900&display=swap" rel="stylesheet">
+    <script src="script.js"></script>
   </head>
   <body>
     <header>
       <div class="header-top">
         <div class="logo">
         </div>
-        <div class="search">
-          <input class="search-text" type="text" id="searchInput" placeholder="検索語を入力します" onkeyup="enterkeySearch()"/>
-          <button class="search-btn" type="submit" onclick="searchPage()"></button>
+        <div  class="search">
+          <input class="search-text" type="text"  placeholder="検索語を入力します" onkeyup="enterkeySearch()"/>
+          <button class="search-btn" type="submit"></button>
         </div>
       </div>
       <div class="nav">
@@ -34,8 +36,7 @@
       <div class="info">
         <div class="text">
           <p id="text1">市民の心身の安寧と、回復</p><br>
-          <p id="text2">健康の為日々邁進して参ります</p>
-        </div>
+          <p id="text2">健康の為日々邁進して参ります</p></div>
       </div>
     </main>
     <footer>
@@ -44,30 +45,5 @@
         <p>▲ TOP</p>
       </div>
     </footer>
-
-    <!-- 🔹 JavaScript (検索機能) -->
-    <script>
-      function searchPage() {
-          const pages = {
-              "病院": "hospital.html",
-              "診療": "medical.html",
-              "アクセス": "access.html",
-              "料金": "price.html",
-              "利用規約": "https://hospinfo-enuei-city.org/guideline",
-              "図書館": "https://hospinfo-enuei-city.org/utamihon"
-          };
-
-          let keyword = document.getElementById("searchInput").value.trim();
-             if (keyword) {
-        window.location.href = `search.html?q=${encodeURIComponent(keyword)}`;
-    }
-}
-
-function enterkeySearch(event) {
-    if (event.key === "Enter") {
-        searchPage();
-    }
-}
-    </script>
   </body>
 </html>
