--- a/main.html
+++ b/main.html
@@ -1,98 +1,31 @@
-padding: 0;
-margin: 0;
-}
-
-.nav ul li {
-margin: 0 15px;
-}
-
-.nav ul li a {
-text-decoration: none;
-color: #333;
-}
-
-.info {
-text-align: center;
-margin: 50px 0;
-}
-
-footer {
-text-align: center;
-padding: 10px;
-background-color: #333;
-color: white;
-}
-/* 기존 CSS는 그대로 유지 */
-
-      /* 반응형 디자인 */
-      @media (max-width: 768px) {
-        .search {
-          flex-direction: column;
-          align-items: center;
-        }
-/* 반응형 디자인을 위한 미디어 쿼리 추가 */
-@media (max-width: 768px) {
-  /* 헤더 수정 */
-  header {
-    width: 100%;
-    height: auto;
-    flex-direction: column;
-    align-items: center;
-    padding: 10px;
-  }
-
-        .nav ul {
-          flex-direction: column;
-        }
-  header .logo a {
-    width: 200px; /* 로고 크기 축소 */
-    height: auto;
-    margin-left: 0;
-    margin-top: 0;
-  }
-
-        .nav ul li {
-          margin: 10px 0;
-        }
-  /* 검색창 수정 */
-  header .search {
-    right: 0;
-    position: relative;
-    margin-top: 10px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-
-        .info {
-          margin: 30px 20px;
-        }
-  header .search-text {
-    width: 80%;
-    margin: 5px 0;
-  }
-
-        .logo {
-          font-size: 18px;
-        }
-      }
-    </style>
+<!DOCTYPE html>
+<html lang="ja-JP">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title></title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@200..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&family=Noto+Serif+JP:wght@200..900&display=swap" rel="stylesheet">
+    <script src="script.js"></script>
   </head>
   <body>
-    <header> 
-        <h1 class="logo">
-          <a href="index.html">Logo</a>
+    <header> <!--로고+검색창-->
+        <h1 class="logo"><!--로고가 들어가는 영역-->
+          <a href="index.html"></a>
         </h1>
-        <div class="search">
-          <input class="search-text" type="text" placeholder="検索語を入力します" onkeyup="enterkeySearch()"/>
+        <div  class="search"><!--검색창-->
+          <input class="search-text" type="text"  placeholder="検索語を入力します"  onkeyup="enterkeySearch()"/> <!--placeholder = 검색창 내부에 검색하기 전에 보이는 글자-->
           <button class="search-btn" type="submit"></button>
         </div>
     </header>
-    <div class="nav">
+    <div class="nav"><!--메뉴-->
       <ul>
         <li><a href="#">紹介</a></li>
-        <li><a href="#">利用規約</a></li>
-        <li><a href="#">図書館</a></li>
+          <li><a href="https://hospinfo-enuei-city.org/guideline">利用規約</a></li>
+          <li><a href="https://hospinfo-enuei-city.org/utamihon">図書館</a></li>
         <li><a href="#">関連情報</a></li>
         <li><a href="#">連絡所</a></li>
         <li><a href="#">お問い合わせ</a></li>
@@ -100,88 +33,16 @@ color: white;
     </div>
     <main>
       <div class="info">
-        <div class="text"> 
+        <div class="text"> <!--메인 페이지 텍스트-->
           <p id="text1">市民の心身の安寧と、回復</p><br>
-          <p id="text2">健康の為日々邁進して参ります</p>
-        </div>
+          <p id="text2">健康の為日々邁進して参ります</p></div>
       </div>
     </main>
-    <footer> 
+    <footer> <!--바닥 영역-->
       <p>© 2011 CU1000 N/A City General Hospital, All rights reserved.</p>
-      <button id="page-top" onclick="backToTop()">▲ TOP</button>
+      <button id="page-top" onclick="backToTop()"> <!--위로 올라가는 버튼-->
+        ▲ TOP
+      </button>
     </footer>
   </body>
 </html>
-  header .search-btn {
-    width: 50px;
-    height: 50px;
-    background-size: contain;
-    margin-top: 5px;
-  }
-
-  /* 네비게이션 수정 */
-  .nav {
-    width: 100%;
-    height: auto;
-    background-color: #683722;
-    border: none;
-    padding: 10px 0;
-  }
-
-  .nav ul {
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .nav ul li {
-    margin: 10px 0;
-    font-size: 18px;
-  }
-
-  /* 메인 섹션 수정 */
-  main {
-    width: 100%;
-    height: auto;
-    padding: 20px;
-  }
-
-  main .info {
-    width: 100%;
-    height: auto;
-    position: relative;
-    background-image: url('image/main_2.png');
-    background-size: cover;
-    background-position: center;
-  }
-
-  main .info .text {
-    width: 100%;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: rgba(0, 0, 0, 0.5);
-    padding: 20px;
-    text-align: center;
-  }
-
-  main .info .text p {
-    writing-mode: horizontal-tb;
-    font-size: 24px;
-    line-height: 1.5;
-  }
-
-  /* 푸터 수정 */
-  footer {
-    width: 100%;
-    height: auto;
-    padding: 10px;
-    text-align: center;
-  }
-
-  footer #page-top {
-    position: relative;
-    margin-top: 10px;
-    right: 0;
-  }
-}
