--- a/krwiki.html
+++ b/krwiki.html
@@ -124,8 +124,8 @@
     <div class="profile-header">프로필</div>
 
     <div class="profile-images">
-      <img src="Image/low_null.png" alt="키비주얼">
-      <img src="Image/nullmodelhalf2.png" alt="모델링">
+      <img src="‎image/low_null.png" alt="키비주얼">
+      <img src="image/nullmodelhalf2.png" alt="모델링">
     </div>
 
     <table class="profile-table">
